--- a/_posts/2020-01-27-quantum.md
+++ b/_posts/2020-01-27-quantum.md
@@ -9,14 +9,12 @@ permalink: /event-1/
 
 <!-- # CogSys Talks presents: Quantum Machine Learning -->
 
-Quantum Computers aim to be the next generation of computers that can solve highly complex problems
-that classical computers would fail to solve in a reasonable time. Because they are using Qubits,
-obtained by the superposition and entanglement of two quantum states, specific quantum algorithms need
-to be designed to be performed on a quantum computer.
+Quantum computers trigger a growing interest in the scientific community since they aim to solve highly complex problems
+in a reasonable time. This can be achieved by using Qubits, equivalent of classical bits, obtained by the superposition
+and entanglement of two quantum states. Redefining the core of a computer system means that specific algorithms need to be
+looked out, to be exploited. How are those algorithms designed? Do we actually have quantum computers available?
 
-How are those algorithms designed? Do we actually have quantum computers available?
-
-For our very first event, we are excited to welcome Arthur and Jonathan, both working on quantum machine learning.
+For our very first event, we are excited to welcome Arthur and Jonathan:
 
   - [Arthur](https://artix41.github.io/) was previously working at Xanadu and 1QBit. He will give us an
   introduction about quantum machine learning "beyond the hype".
