--- a/_posts/2020-01-27-transfer.md
+++ b/_posts/2020-01-27-transfer.md
@@ -11,8 +11,8 @@ permalink: /event-3/
 
 <!-- # CogSys Talks presents: Transfer learning -->
 
-We are happy to welcome Kasia and Aydan, talking about transfer learning:
+We are happy to welcome Kasia and Aydan to talk about transfer learning:
 
-  - [Aydan]() PhD student and founder of “Women in Computing” at the Imperial College.
+  - Aydan Gasimova, PhD student and founder of “Women in Computing” at the Imperial College London.
   She will give us an introduction about transfer learning.
-  - [Kasia]() research scientist at Twitter Cortex. She will talk about representtaion learning for few shot learning.
+  - Katarzyna Janocha, research scientist at Twitter Cortex. She will talk about representation learning for few shot learning.
