past event and room update

--- a/_posts/2020-01-27-quantum.md
+++ b/_posts/2020-01-27-quantum.md
@@ -2,7 +2,7 @@
 layout: post
 title: Quantum machine learning
 date_event: 2020-02-14T10:20:00Z
-tag: upcoming
+tag: past
 image: "/images/illustration/event1-qubit.png"
 permalink: /event-1/
 ---
@@ -14,7 +14,7 @@ in a reasonable time. This can be achieved by using qubits, equivalent of classi
 and entanglement of two quantum states. Redefining the core of a computer system means that specific algorithms need to be
 looked out, to be exploited. How are those algorithms designed? Do we actually have quantum computers available?
 
-For our very first event, we are excited to welcome Arthur and Jonathan:
+For our very first event, we welcomed Arthur and Jonathan:
 
   - [Arthur Pesah](https://artix41.github.io/) was previously working at Xanadu and 1QBit. He will give us an
   introduction about quantum machine learning "beyond the hype".
