add slides for quantum and RL

--- a/_posts/2020-01-27-quantum.md
+++ b/_posts/2020-01-27-quantum.md
@@ -16,7 +16,9 @@ looked out, to be exploited. How are those algorithms designed? Do we actually h
 
 For our very first event, we welcomed Arthur and Jonathan:
 
-  - [Arthur Pesah](https://artix41.github.io/) was previously working at Xanadu and 1QBit. He will give us an
-  introduction about quantum machine learning "beyond the hype".
+  - [Arthur Pesah](https://artix41.github.io/) was previously working at Xanadu and 1QBit. Arthur gave an
+  introduction about quantum machine learning "beyond the hype". \\
+The introduction is available [here](https://drive.google.com/open?id=18EztJO8ORBhxTdpHMlEf2u1LdO0QOacG).  
   - [Jonathan Foldager](http://jonathanfoldager.com/) is a PhD student at CogSys, working on the implementation of quantum
-  machine learning models. He will talk about ensemble learning and quantum approximate optimization algorithm
+  machine learning models. He will talk about ensemble learning and quantum approximate optimization algorithm. \\
+His talk is available [here](https://drive.google.com/open?id=1dHz96aqbTDefuDcUpopA9JuQqPdsg54q).
