--- a/_posts/2020-01-27-quantum.md
+++ b/_posts/2020-01-27-quantum.md
@@ -9,10 +9,7 @@ permalink: /event-1/
 
 <!-- # CogSys Talks presents: Quantum Machine Learning -->
 
-Quantum computers trigger a growing interest in the scientific community since they aim to solve highly complex problems
-in a reasonable time. This can be achieved by using qubits, equivalent of classical bits, obtained by the superposition
-and entanglement of two quantum states. Redefining the core of a computer system means that specific algorithms need to be
-looked out, to be exploited. How are those algorithms designed? Do we actually have quantum computers available?
+Quantum computers trigger a growing interest in the scientific community since they aim to solve highly complex problems in a reasonable time. This can be achieved by using qubits, equivalent of classical bits, obtained by the superposition and entanglement of two quantum states. Redefining the core of a computer system means that specific algorithms need to be looked out, to be exploited. How are those algorithms designed? Do we actually have quantum computers available?
 
 For our very first event, we welcomed Arthur and Jonathan:
 
