event on fairness -- small changes

--- a/_posts/2021-05-20-fairness.md
+++ b/_posts/2021-05-20-fairness.md
@@ -11,6 +11,6 @@ permalink: /event-8/
 
 - [Lydia Liu](https://lydiatliu.github.io/) is a PhD student at Berkeley, under the supervision of Moritz Hardt and Michael Jordan. Her research lies on the theoretical foundations of machine learning and algorithmic decision-making, with a focus on societal impact and human welfare. She also received the Best paper award, at ICML 2018, for her paper: ‘Delayed Impact of Fair Machine Learning’.
 
-- [Pola Schwöbel](https://www.dtu.dk/english/about/press-room/articles/nyhed?id=375e1e4f-bbdd-4523-a89f-5ca287614ac5) is a PhD at the Technical University of Denmark, her research focuses on bias in Machine learning. She will give a talk in tandem with Dr. [Peter Remmers](https://www.philtech.tu-berlin.de/menue/team/remmers/) about Fairness from a philosophical perspective, and will give an overview of the different metrics used in fairness.
+- [Pola Schwöbel](https://www.dtu.dk/english/about/press-room/articles/nyhed?id=375e1e4f-bbdd-4523-a89f-5ca287614ac5) is a PhD at the Technical University of Denmark, her research focuses on Probabilistic Machine Learning and Fairness. She will present a joint work with Dr. Peter Remmers about Fairness from a philosophical perspective, and will give an overview of the different metrics used in fairness.
 
 - Dr. [Dirk Hovy](http://www.dirkhovy.com/index.php) is an associate professor at Bocconi University, and also director of the Data and Marketing Insights research unit at the Bocconi Center for Data Science and Analytics. His research focuses on computational social science and he works in Natural Language Processing (NLP). He will give us an overview on demographic bias in NLP models.
